Build Documentation / Missing from last commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 dependencies/*
+!dependencies/lib
 !dependencies/lib/android_armv7
 dependencies/lib/android_armv7/*
 !dependencies/lib/android_armv7/build-instructions.txt
