--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ dependencies/lib/android_armv7/*
 !dependencies/lib/mingw482_32
 dependencies/lib/mingw482_32/*
 !dependencies/lib/mingw482_32/build-instructions.txt
-minipos.pro.user
+*.user
