Added required netowrk access permissions

--- a/deployment/android/AndroidManifest.xml
+++ b/deployment/android/AndroidManifest.xml
@@ -46,4 +46,6 @@
     <!-- %%INSERT_FEATURES -->
 
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
